objects/EUR_CRM_Recommended_Account__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Recommended Accounts</relationshipLabel>
        <relationshipName>Recommended_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Business_Development_Score__c</fullName>
        <label>Business Development Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Days_since_last_visit__c</fullName>
        <label>Days since last visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Dropshipping_Status__c</fullName>
        <label>Dropshipping Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Promotion_Score__c</fullName>
        <label>Promotion Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Rank__c</fullName>
        <label>Visit Rank</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Type__c</fullName>
        <label>Visit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Week_KDP__c</fullName>
        <label>Week KDP</label>
        <referenceTo>EUR_CRM_Week_KDP__c</referenceTo>
        <relationshipLabel>Recommended Accounts</relationshipLabel>
        <relationshipName>Recommended_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Recommended Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RA-{00000000}</displayFormat>
        <label>Recommended Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommended Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>